WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256418
REGRESSION(
263746@main
) DrawingAreaWC.h: error C3668: 'WebKit::DrawingAreaWC::attachViewOverlayGraphicsLayer': method with override specifier 'override' did not override any base class methods
https://bugs.webkit.org/show_bug.cgi?id=256418
Summary
REGRESSION(263746@main) DrawingAreaWC.h: error C3668: 'WebKit::DrawingAreaWC:...
Fujii Hironori
Reported
2023-05-06 06:11:23 PDT
REGRESSION(
263746@main
) DrawingAreaWC.h: error C3668: 'WebKit::DrawingAreaWC::attachViewOverlayGraphicsLayer': method with override specifier 'override' did not override any base class methods
> WebKit\WebProcess\WebPage\wc\DrawingAreaWC.h(63): error C3668: 'WebKit::DrawingAreaWC::attachViewOverlayGraphicsLayer': method with override specifier 'override' did not override any base class methods
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-05-06 06:31:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13536
EWS
Comment 2
2023-05-06 06:35:59 PDT
Committed
263756@main
(75e1ccf10122): <
https://commits.webkit.org/263756@main
> Reviewed commits have been landed. Closing PR #13536 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-06 06:36:20 PDT
<
rdar://problem/108988474
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug