REGRESSION(263746@main) DrawingAreaWC.h: error C3668: 'WebKit::DrawingAreaWC::attachViewOverlayGraphicsLayer': method with override specifier 'override' did not override any base class methods https://bugs.webkit.org/show_bug.cgi?id=256418

Unreviewed build fix after 263746@main for Windows port.

* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:
(WebKit::DrawingAreaWC::attachViewOverlayGraphicsLayer):
* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.h:
Added the first argument of type FrameIdentifier.

Canonical link: https://commits.webkit.org/263756@main